# optimized-shifts

./: .gitignore  Dockerfile.backend  Dockerfile.worker  README.md  client.py  docker-compose.yaml  init.sql  main.py  pyproject.toml
optimized_shifts/: lifespan.py  state.py  ws.py
optimized_shifts/celery/: processer.py  tasks.py
optimized_shifts/celery/cloud/: buckets.py
optimized_shifts/celery/config/: celeryconfig.py
optimized_shifts/crud/: region.py  trips.py
optimized_shifts/dependencies/: __init__.py
optimized_shifts/handlers/: errors.py
optimized_shifts/routes/v1/: __init__.py  travels.py  trips.py
optimized_shifts/schemas/: api.py  region.py  trip.py
tests/: conftest.py
tests/procesor/: test_process_mocked.py
tests/routes/v1/travels/: test_get_travels.py
tests/routes/v1/trips/: test_get_trips.py  test_post_trips.py
