[tool.poetry]
name = "optimized-shifts"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
asyncpg = "0.28.0"
aiofiles = "23.2.1"
uvicorn = "^0.23.2"
celery = {extras = ["redis"], version = "5.3.4"}
sse-starlette = "1.6.5"


[tool.poetry.group.dev.dependencies]
mypy = "1.6.1"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "^0.25.0"
celery-types = "0.20.0"
asyncpg-stubs = "^0.28.0"

[tool.poetry.group.celery.dependencies]
celery = {extras = ["redis"], version = "5.3.4"}
flower = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
