[tool.poetry]
name = "optimized-shifts"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.104.1"
asyncpg = "0.28.0"
aiofiles = "23.2.1"
uvicorn = "0.23.2"
celery = {extras = ["redis"], version = "5.3.4"}
sse-starlette = "1.6.5"
pandas = "2.1.2"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.6.1"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
httpx = "0.25.0"
celery-types = "0.20.0"
asyncpg-stubs = "0.28.0"
asgi-lifespan = "2.1.0"
pytest-dotenv = "0.5.2"
sseclient = "0.0.27"

[tool.poetry.group.celery.dependencies]
celery = {extras = ["redis"], version = "5.3.4"}
flower = "2.0.1"
pandas = "2.1.2"
asyncpg = "0.28.0"

[tool.pytest.ini_options]
env_files = ".env.local"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
